View Issue Details

IDProjectCategoryView StatusLast Update
0024061Open CASCADEOCCT:DRAWpublic2013-12-19 13:57
Reportervro Assigned Tobugmaster  
PrioritylowSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2010 
Product Version6.6.0 
Target Version6.7.0Fixed in Version6.7.0 
Summary0024061: Draw-commands for Voxels are insuficient to test the funcitonality
DescriptionThe draw-commands for Voxels represent a set of non-regression commands without parameters and covering only a basic part of functionality. Recent improvements in this area revealed necessity to upgrade the draw-commands. Seems enough if:
 - existing draw-commands obtain draw-parameters;
 - a new draw-command appear calling the converter of a shape into voxels and filling-in the volume;
Steps To ReproduceThe non-regression tests of Open CASCADE (testgrid v3d voxel) will be modified according to the changes.
TagsNo tags attached.
Test case numberv3d voxel(012) A1-B3

Activities

vro

2013-07-10 11:45

developer   ~0025011

Dear Mkv,
Could you review the changes, please: CR24061voxel. In this branch:
1) Draw-commands for voxels are upgraded by parameters (they had no parameters).
2) A new draw-command is added calling the converter of a shape into voxels.
3) Non-regression tests (testgrid v3d voxel) are updated according to the changes.

mkv

2013-07-15 12:40

tester   ~0025061

Reviewed.

mkv

2013-07-16 11:52

tester   ~0025074

Dear BugMaster,

Branch CR24061voxel (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: b7cf5ff4c787bc54666247c8af22601012cf4a19

Number of compiler warnings:

occt component :
Linux: 2 (2 on master)
Windows: 8 (8 on master)

products component :
Linux: 0 (0 on master)
Windows: 63 (63 on master)

Regressions:
http://occt-tests/CR24061-master-occt/Debian60-64/bugs/vis/bug19820.html
bugs vis(004) bug19820 - voxeloctboolds ; CPU limit (1000 sec)

Improvements:
No improvements

Testing cases:
v3d voxel(012) A1-B3 - OK.

Testing on Linux:
Total MEMORY difference: 365760296 / 365719728
Total CPU difference: 43864.810000001045 / 45331.48000000106

Testing on Windows:
Total MEMORY difference: 424288676 / 425900944
Total CPU difference: 32653.546875 / 34956.875

There are not differences in images found by testdiff.

vro

2013-08-19 09:12

developer   ~0025341

Resolved: CR24061voxel.

vro

2013-08-19 09:13

developer   ~0025342

Resolved! Please, test.

apn

2013-08-20 12:45

administrator   ~0025350

Last edited: 2013-08-22 11:17

Dear BugMaster,

Branch CR24061voxel ( and products from GIT master ) was compiled on Linux and Windows platforms and tested.
SHA-1: dc2d69985ee0aef727ddb6c21120a630b0c8a355

Number of compiler warnings:

occt component :
Linux: 915 (923 on master)
Windows: 852 (852 on master)

products component :
Linux: 188 (188 on master)
Windows: 287 (287 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
v3d voxel(012) A1-B3 - OK

Testing on Linux:
Total MEMORY difference: 364505056 / 365964576
Total CPU difference: 47529.09000000062 / 42535.79000000082

Testing on Windows:
Total MEMORY difference: 427001400 / 428265880
Total CPU difference: 32840.203125 / 32973.59375

There are not differences in images found by testdiff.

Related Changesets

occt: master b45c727b

2013-08-22 09:07:17

vro


Committer: bugmaster Details Diff
0024061: Draw-commands for Voxels are insufficient to test the functionality

Upgrade of draw-commands + a new draw-command calling conversion of a shape into voxels.
Resolved of a problem of failure of non-regression tests on voxels (vis/bug19820).
Affected Issues
0024061
mod - src/ViewerTest/ViewerTest_VoxelCommands.cxx Diff File
mod - tests/v3d/voxel/A1 Diff File
mod - tests/v3d/voxel/A2 Diff File
mod - tests/v3d/voxel/A3 Diff File
mod - tests/v3d/voxel/A4 Diff File
mod - tests/v3d/voxel/A5 Diff File
mod - tests/v3d/voxel/A6 Diff File
mod - tests/v3d/voxel/A7 Diff File
mod - tests/v3d/voxel/A8 Diff File
mod - tests/v3d/voxel/A9 Diff File
mod - tests/v3d/voxel/B1 Diff File
mod - tests/v3d/voxel/B2 Diff File
add - tests/v3d/voxel/B3 Diff File

Issue History

Date Modified Username Field Change
2013-07-10 11:09 vro New Issue
2013-07-10 11:09 vro Assigned To => vro
2013-07-10 11:45 vro Note Added: 0025011
2013-07-10 11:45 vro Assigned To vro => mkv
2013-07-10 11:45 vro Status new => resolved
2013-07-15 12:40 mkv Note Added: 0025061
2013-07-15 12:42 mkv Test case number => v3d voxel(012)
2013-07-15 12:42 mkv Status resolved => reviewed
2013-07-16 11:52 mkv Note Added: 0025074
2013-07-16 11:53 mkv Test case number v3d voxel(012) => v3d voxel(012) A1-B3
2013-07-16 11:53 mkv Assigned To mkv => vro
2013-07-16 11:53 mkv Status reviewed => assigned
2013-08-19 09:12 vro Note Added: 0025341
2013-08-19 09:13 vro Note Added: 0025342
2013-08-19 09:13 vro Assigned To vro => mkv
2013-08-19 09:13 vro Status assigned => resolved
2013-08-19 11:23 mkv Assigned To mkv => apn
2013-08-19 11:23 mkv Status resolved => reviewed
2013-08-20 12:45 apn Note Added: 0025350
2013-08-20 12:47 apn Assigned To apn => bugmaster
2013-08-20 12:47 apn Status reviewed => tested
2013-08-20 12:47 apn Target Version 7.0.0 => 6.7.0
2013-08-22 11:17 bugmaster Note Edited: 0025350
2013-08-23 14:11 bugmaster Changeset attached => occt master b45c727b
2013-08-23 14:11 bugmaster Status tested => verified
2013-08-23 14:11 bugmaster Resolution open => fixed
2013-12-19 13:52 bugmaster Status verified => closed
2013-12-19 13:57 bugmaster Fixed in Version => 6.7.0