0024061: Draw-commands for Voxels are insufficient to test the functionality

Upgrade of draw-commands + a new draw-command calling conversion of a shape into voxels.
Resolved of a problem of failure of non-regression tests on voxels (vis/bug19820).